WeeChat ChangeLog
=================
FlashCode <flashcode@flashtux.org>
v0.3.1-dev, 2009-09-20


Version 0.3.1 (under dev!)
--------------------------

* core: fix plural form in translation files (bug #27430)
* core: fix terminal title bug: do not reset it when option
  weechat.look.set_title is off (bug #27399)
* alias: fix bug with arguments (bug #27440)
* irc: add options for CTCP, to block/customize CTCP reply (task #9693)
* irc: add missing CTCP: clientinfo, finger, source, time, userinfo (task #7270)
* irc: improve error management on socket error (recv/send)
* xfer: add missing charset decoding/encoding for IRC DCC chat (bug #27482)
* gui: update hotlist when a buffer is closed (bug #27470)
* gui: fix /input history_global_next: reset input content when last command in
  history is reached
* api: fix function weechat_bar_set for python/lua/ruby (patch #6912)

Version 0.3.0 (2009-09-06)
--------------------------

* irc: add irc plugin (replaces old IRC code in core) (task #6217)
* irc: add smart join/part/quit message filter (task #8503)
* irc: use of many addresses for servers (auto-switch when a connexion fails),
  nicks are now set with one option "nicks" (task #6088)
* irc: add some colors in messages from server (for text and nicks)
  (task #8926)
* irc: add color decoding in title for IRC channels (task #6030)
* irc: fix lock with SSL servers when connection fails, and when
  disconnecting during connection problem (bug #17584)
* irc: command /whois is now authorized in private without argument
  (task #7482)
* irc: fix private buffer name with irssi proxy (bug #26589)
* irc: remove kernel info in CTCP VERSION reply (task #7494)
* irc: add missing commands (328, 369)
* irc: fix mode parsing when receiving modes with arguments (bug #26793)
* aspell: improve plugin: use of many dictionaries, global dictionary, real
  time checking (optional), fix bugs with utf-8
* xfer: add speed limit for DCC files sending (task #6178)