@@ -31,11 +31,27 @@ SET(VERSION_MINOR "3")
 SET(VERSION_PATCH "1-dev")
 SET(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 SET(PKG_STRING "${PROJECT_NAME} ${VERSION}")
-SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME})
-SET(SHAREDIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
-SET(LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
-SET(INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
 STRING(REPLACE "\";\"" "\ " PKG_STRING ${PKG_STRING})
+
+IF(DEFINED LIBDIR)
+  SET(LIBDIR ${LIBDIR}/${PROJECT_NAME})
+ELSE(DEFINED LIBDIR)
+  SET(LIBDIR ${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME})
+ENDIF(DEFINED LIBDIR)
+
+IF(NOT DEFINED SHAREDIR)
+  SET(SHAREDIR ${CMAKE_INSTALL_PREFIX}/share)
+ENDIF(NOT DEFINED SHAREDIR)
+
+IF(NOT DEFINED LOCALEDIR)
+  SET(LOCALEDIR ${SHAREDIR}/locale)
+ENDIF(NOT DEFINED LOCALEDIR)
+
+IF(DEFINED INCLUDEDIR)
+  SET(INCLUDEDIR ${INCLUDEDIR}/${PROJECT_NAME})
+ELSE(DEFINED INCLUDEDIR)
+  SET(INCLUDEDIR ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
+ENDIF(DEFINED INCLUDEDIR)
 
 OPTION(DISABLE_NCURSES       "Disable Ncurses interface")
 OPTION(ENABLE_GTK            "Enable GTK interface")
@@ -93,7 +109,7 @@ SET(exec_prefix "\${prefix}")
 SET(libdir "\${exec_prefix}/lib")
 SET(includedir "\${prefix}/include")
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/weechat.pc.in ${CMAKE_CURRENT_BINARY_DIR}/weechat.pc @ONLY)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/weechat.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig)
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/weechat.pc DESTINATION ${LIBDIR}/../pkgconfig)
 
 # packages
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Fast, light and extensible chat client")
