@@ -27,4 +27,4 @@ IF(NOT DISABLE_DOC)
 
 ENDIF(NOT DISABLE_DOC)
 
-INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/weechat-curses.1 DESTINATION share/man/man1)
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/weechat-curses.1 DESTINATION ${SHAREDIR}/man/man1)
