@@ -69,7 +69,7 @@ IF(XGETTEXT_EXECUTABLE AND MSGMERGE_EXECUTABLE AND MSGFMT_EXECUTABLE)
       COMMENT "Compiling locales (${polang})"
       )
     
-    INSTALL(FILES ${gmofile} DESTINATION share/locale/${polang}/LC_MESSAGES RENAME ${PROJECT_NAME}.mo)
+    INSTALL(FILES ${gmofile} DESTINATION ${LOCALEDIR}/${polang}/LC_MESSAGES RENAME ${PROJECT_NAME}.mo)
     SET(GMO_FILES ${GMO_FILES} ${gmofile})
   ENDFOREACH(pofile ${PO_FILES})
   ADD_CUSTOM_TARGET(translations ALL DEPENDS ${GMO_FILES})
