@@ -105,12 +105,12 @@ IF(DL_LIBRARY)
   LIST(APPEND EXTRA_LIBS dl)
 ENDIF(DL_LIBRARY)
 
-if(COMMAND cmake_policy)
+IF(COMMAND cmake_policy)
   cmake_policy(SET CMP0005 NEW)
   ADD_DEFINITIONS(-DWEECHAT_VERSION="${VERSION}")
-else(COMMAND cmake_policy)
+ELSE(COMMAND cmake_policy)
   ADD_DEFINITIONS(-DWEECHAT_VERSION='"${VERSION}"')
-endif(COMMAND cmake_policy)
+ENDIF(COMMAND cmake_policy)
 
 ADD_SUBDIRECTORY( core )
 LIST(APPEND STATIC_LIBS weechat_core)
