@@ -21,4 +21,4 @@ SET_TARGET_PROPERTIES(alias PROPERTIES PREFIX "")
 
 TARGET_LINK_LIBRARIES(alias)
 
-INSTALL(TARGETS alias LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS alias LIBRARY DESTINATION ${LIBDIR}/plugins)
