@@ -26,4 +26,4 @@ IF(ICONV_FOUND)
   ENDIF(ICONV_LIBRARY)
 ENDIF(ICONV_FOUND)
 
-INSTALL(TARGETS charset LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS charset LIBRARY DESTINATION ${LIBDIR}/plugins)
