@@ -47,4 +47,4 @@ ELSE(GNUTLS_FOUND)
   TARGET_LINK_LIBRARIES(irc)
 ENDIF(GNUTLS_FOUND)
 
-INSTALL(TARGETS irc LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS irc LIBRARY DESTINATION ${LIBDIR}/plugins)
