@@ -27,4 +27,4 @@ SET_TARGET_PROPERTIES(relay PROPERTIES PREFIX "")
 
 TARGET_LINK_LIBRARIES(relay)
 
-INSTALL(TARGETS relay LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS relay LIBRARY DESTINATION ${LIBDIR}/plugins)
