@@ -28,4 +28,4 @@ IF(LUA_FOUND)
   ENDIF(LUA_LIBRARY AND LUALIB_LIBRARY)
 ENDIF(LUA_FOUND)
 
-INSTALL(TARGETS lua LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS lua LIBRARY DESTINATION ${LIBDIR}/plugins)
