@@ -35,4 +35,4 @@ IF(PERL_FOUND)
   ENDIF(PERL_DYNALOADER)
 ENDIF(PERL_FOUND)
 
-INSTALL(TARGETS perl LIBRARY DESTINATION lib/${PROJECT_NAME}/plugins)
+INSTALL(TARGETS perl LIBRARY DESTINATION ${LIBDIR}/plugins)
