@@ -25,4 +25,4 @@ IF(PYTHON_FOUND)
   TARGET_LINK_LIBRARIES(python ${PYTHON_LIBRARY} weechat_scripts)
 ENDIF(PYTHON_FOUND)
 
-INSTALL(TARGETS python LIBRARY DESTINATION lib/weechat/plugins)
+INSTALL(TARGETS python LIBRARY DESTINATION ${LIBDIR}/plugins)
