@@ -29,4 +29,4 @@ IF(TCL_FOUND)
 
 ENDIF(TCL_FOUND)
 
-INSTALL(TARGETS tcl LIBRARY DESTINATION lib/weechat/plugins)
+INSTALL(TARGETS tcl LIBRARY DESTINATION ${LIBDIR}/plugins)
